# memlp

./: .gitignore  CMakeLists.txt  Data.h  Dataset.cpp  Dataset.hpp  Layer.h  Loss.h  MLP.cpp  MLP.h  Makefile  Node.h  OrnsteinUhlenbeckNoise.h  README.md  ReplayMemory.hpp  Sample.h  Utils.cpp  Utils.h  cmake_automate_XMOS.sh  cmake_automate_linux.sh  config.xscope  lib_build_info.cmake  notes.md  notes.txt  readme.md  xscope.vcd
MLP_MVS/: MLP_MVS.sln  MLP_MVS.vcxproj  MLP_MVS.vcxproj.filters
MLP_MVS/FuncLearnTest/: FuncLearnTest.cpp  FuncLearnTest.vcxproj
MLP_MVS/IrisDatasetTest/: IrisDatasetTest.vcxproj
MLP_MVS/LayerTest/: LayerTest.vcxproj
MLP_MVS/MLPTest/: MLPTest.vcxproj
MLP_MVS/NodeTest/: NodeTest.vcxproj
api/: Layer.h  Loss.h  MLP.h  Node.h  Utils.h
api/utils/: Flash.hpp  Serialise.hpp
data/: iris.mlp
src/: Data.h  FuncLearnTest.cpp  FuncLearnTest.hpp  IrisDatasetTest.cpp  Layer.h  LayerTest.cpp  Loss.h  LossTest.cpp  MLP.cpp  MLP.h  MLPTest.cpp  Node.h  NodeTest.cpp  Probe.cpp  Probe.hpp  Sample.h  Utils.h  xmos_main.cpp  xmos_par_main.c
src/utils/: Serialise.hpp
tests/: FlashTest.cpp  IrisDatasetTest.cpp  LossTest.cpp  MLPTest.cpp  NodeTest.cpp  SerialiseTest.cpp  UnitTest.hpp  _TestMain.cpp  xmos_main.cpp
utils/: Flash.hpp  Serialise.hpp
